fixed things, almost completed permis gestion ,TODO update availability on stock change